# UndyingTerminal

./: .gitignore  BLOCKERS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  PENDINGFEATURES.md  PENDING_FEATURES.md  PROGRESS.md  PROJECT.md  README.md  SECURITY.md  test_smoke.bat  vcpkg.json  vercel.json  website-checklist.md
.changeset/: 0000-task.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: .mintignore  basic-usage.mdx  docs.json  installation.mdx  introduction.mdx  quickstart.mdx  style.css
docs/api-reference/: client-cli.mdx
docs/architecture/: overview.mdx
docs/concepts/: encryption.mdx  persistent-sessions.mdx  recovery-protocol.mdx
docs/config/: server-config.mdx
docs/development/: contributing.mdx
docs/guides/: built-in-ui.mdx  jumphost.mdx  port-forwarding.mdx  ssh-bootstrap.mdx  windows-service.mdx
docs/troubleshooting/: common-issues.mdx  faq.mdx
landing/: .gitignore  components.json  package-lock.json  package.json  tsconfig.json
landing/promotion/: reddit-r-bashonubuntuonwindows.md  reddit-r-commandline.md  reddit-r-cpp.md  reddit-r-powershell.md  reddit-strategy.md
landing/public/: manifest.json  robots.txt  sitemap.xml
landing/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
landing/src/app/privacy/: page.tsx
landing/src/components/: discrete-tabs.tsx  faqs.tsx  features-1.tsx  footer.tsx  logo.tsx  smooth-dropdown.tsx  terminal-skeleton.tsx
landing/src/components/backgrounds/: Threads.tsx
landing/src/components/ui/: decrypted-text.tsx  light-rays.tsx  shiny-text.tsx
proto/: ET.proto  ETerminal.proto  UT.proto  UTerminal.proto
scripts/: install-service.cmd  package.ps1  uninstall-service.cmd
src/ut/: ClientId.cpp  ClientId.hpp  Config.cpp  Config.hpp  CryptoUtils.cpp  CryptoUtils.hpp  Keepalive.cpp  Keepalive.hpp  MockServer.cpp  MockServer.hpp  PseudoTerminalConsole.cpp  PseudoTerminalConsole.hpp  ReconnectionManager.cpp  ReconnectionManager.hpp  SshCommandBuilder.cpp  SshCommandBuilder.hpp  SshConfig.cpp  SshConfig.hpp  SshSubprocess.cpp  SshSubprocess.hpp  SubprocessUtils.cpp  SubprocessUtils.hpp  TcpClient.cpp  TcpClient.hpp  WindowsPaths.cpp  WindowsPaths.hpp  WinsockContext.cpp  WinsockContext.hpp  main.cpp
src/ut/et/: BackedWriter.cpp  BackedWriter.hpp  Connection.hpp  EtConstants.hpp  PipeSocketHandler.cpp  PipeSocketHandler.hpp  PortForwardHandler.hpp  ServerClientConnection.cpp  SocketHandler.hpp  SocketTypes.hpp  TcpSocketHandler.cpp  TunnelUtils.cpp
src/ut/protocol/: BackedReader.cpp  BackedReader.hpp  BackedWriter.cpp  BackedWriter.hpp  ClientConnection.cpp  ClientConnection.hpp  Connection.cpp  CryptoHandler.cpp  CryptoHandler.hpp  Packet.hpp  PipeSocketHandler.cpp  PipeSocketHandler.hpp  PortForwardHandler.cpp  PortForwardHandler.hpp  ServerClientConnection.cpp  ServerClientConnection.hpp  SocketHandler.cpp  TcpSocketHandler.hpp  TunnelUtils.cpp  TunnelUtils.hpp  UtConstants.hpp
src/utserver/: ClientRegistry.cpp  ClientRegistry.hpp  FirewallRules.cpp  FirewallRules.hpp  JobObject.cpp  JobObject.hpp  NamedPipeServer.cpp  NamedPipeServer.hpp  Server.cpp  Server.hpp  TcpListener.cpp  TcpListener.hpp  Verbose.cpp  Verbose.hpp  WindowsService.cpp  WindowsService.hpp  main.cpp
src/utterminal/: ConPTYSession.cpp  ConPTYSession.hpp  NamedPipeClient.cpp  NamedPipeClient.hpp  main.cpp
src/win/: undying-terminal-server.rc  undying-terminal-terminal.rc  undying-terminal.rc
tests/: client_id_test.cpp  integration_e2e_test.cpp  pseudo_terminal_console_test.cpp  reconnection_manager_test.cpp  ssh_command_builder_test.cpp  ssh_config_test.cpp  ssh_subprocess_test.cpp  subprocess_utils_test.cpp  windows_paths_test.cpp  winsock_context_test.cpp
